tests/e2e/semantics/mutation/string_contains_pattern_invalid2.error
Error: syntax error in story at line 2, column 7

2|    b = a contains pattern: /re/
            ^^^^^^^^

E0113: Mutation `contains` requires argument `item`
