tests/e2e/semantics/mutation/string_contains_pattern_invalid2.story
a = [1, 2]
b = a contains pattern: /re/
